# MRCP-Plugin-Demo

./: .gitignore  .gitmodules  .project  Dockerfile  README.md  dockerfile
Etalons2/: test_voice.m4a
fftss-3.0-20071031/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
fftss-3.0-20071031/doc/: fftssmanual-3.0-20071031-ja.tex  fftssmanual-3.0-20071031.tex
fftss-3.0-20071031/include/: Makefile.am  Makefile.in  config.h.in  fftss.f  fftss.h  fftw3compat.h  libfftss.h  pfftss.h  win32config.h  wrap440d.h
fftss-3.0-20071031/libfftss/: Makefile.am  Makefile.in  fftss.c  fftss_2d.c  fftss_3d.c  fftss_copy.c  fftss_counter.c  fftss_cpuid.c  fftss_destroy_plan.c  fftss_execute.c  fftss_execute_dft.c  fftss_execute_dft_1d.c  fftss_execute_inplace_dft_1d.c  fftss_fma.c  fftss_fortran.c  fftss_get_wtime.c  fftss_kset.c  fftss_malloc.c  fftss_set.c  fftss_table.c  fftss_test.c  fftss_threads.c  fftss_version.c  r4_bgl_asm_n.s  r4_bgl_asm_u1.s  r4_bgl_asm_u4.s  r4_bgl_n.c  r4_bgl_o.c  r4_bgl_pl_n.c  r4_bgl_u1.c  r4_cmplx_n.c  r4_fma_n.c  r4_fma_o.c  r4_fma_u1.c  r4_fma_u4.c  r4_ia64_asm.s  r4_ia64_o.c  r4_n.c  r4_o.c  r4_sse2_1_n.c  (+26 more)
fftss-3.0-20071031/libpfftss/: Makefile.am  Makefile.in  mpi2d.c  testmpi2d.c
fftss-3.0-20071031/test/: Makefile.am  Makefile.in  fftw3.c  test.c  test2d.c  test3d.c
fftss-3.0-20071031/win32/: Makefile.am  Makefile.in  fftss.sln  icl-ia64.bat  icl-x64.bat  icl-x86.bat  libfftss.vcproj  libpfftss.vcproj  pfftss.sln  test.vcproj  testmpi.vcproj
unimrcp-1.5.0/: CMakeLists.txt  Makefile  Makefile.in  aclocal.m4  config.status  configure  configure.ac  libtool
unimrcp-1.5.0/conf/: Makefile  Makefile.in  unimrcpclient.xml  unimrcpserver.xml
unimrcp-1.5.0/conf/umc-scenarios/: README  aneexrecognizer.xml
unimrcp-1.5.0/data/: Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/docs/: doxygen.conf
unimrcp-1.5.0/docs/ea/: blank.htm  index.htm
unimrcp-1.5.0/libs/: Makefile  Makefile.in
unimrcp-1.5.0/libs/apr-toolkit/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mpf/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/libs/mrcp-client/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp-engine/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/libs/mrcp-server/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp-signaling/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcpv2-transport/: Makefile  Makefile.in
unimrcp-1.5.0/libs/uni-rtsp/: Makefile  Makefile.in
unimrcp-1.5.0/modules/: Makefile  Makefile.in
unimrcp-1.5.0/modules/mrcp-sofiasip/: Makefile  Makefile.in
unimrcp-1.5.0/modules/mrcp-unirtsp/: Makefile  Makefile.in
unimrcp-1.5.0/plugins/: Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/plugins/aneex-recog/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/plugins/aneex-recog/.libs/: xfyunrecog.lai
unimrcp-1.5.0/plugins/aneex-recog/aneex/: CMakeLists.txt  CMakeLists_old.txt  CmdLineParser.h  IdTask.h  IndexFingerprints.cpp  IndexFingerprints.h
unimrcp-1.5.0/plugins/aneex-recog/src/: AneexDefine.h  aneex_recog_engine.c  ex_common.h  example3.h
unimrcp-1.5.0/plugins/aneex-recog/src/.deps/: xfyun_recog_engine.Plo
unimrcp-1.5.0/plugins/aneex-synth/: Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/plugins/aneex-synth/.libs/: xfyunsynth.lai
unimrcp-1.5.0/plugins/aneex-synth/src/: aneex_synth_engine.c
unimrcp-1.5.0/plugins/aneex-synth/src/.deps/: xfyun_synth_engine.Plo
unimrcp-1.5.0/plugins/demo-recog/: Makefile  Makefile.in
unimrcp-1.5.0/plugins/demo-recog/.libs/: demorecog.lai
unimrcp-1.5.0/plugins/demo-recog/src/: demo_recog_engine.c
unimrcp-1.5.0/plugins/demo-recog/src/.deps/: demo_recog_engine.Plo
unimrcp-1.5.0/plugins/demo-synth/: Makefile  Makefile.in
unimrcp-1.5.0/plugins/demo-synth/.libs/: demosynth.lai
unimrcp-1.5.0/plugins/demo-synth/src/.deps/: demo_synth_engine.Plo
unimrcp-1.5.0/plugins/demo-verifier/: Makefile  Makefile.in
unimrcp-1.5.0/plugins/demo-verifier/.libs/: demoverifier.lai
unimrcp-1.5.0/plugins/demo-verifier/src/.deps/: demo_verifier_engine.Plo
unimrcp-1.5.0/plugins/mrcp-recorder/: Makefile  Makefile.in
unimrcp-1.5.0/plugins/mrcp-recorder/.libs/: mrcprecorder.lai
unimrcp-1.5.0/plugins/mrcp-recorder/src/: mrcp_recorder_engine.c
unimrcp-1.5.0/plugins/mrcp-recorder/src/.deps/: mrcp_recorder_engine.Plo
unimrcp-1.5.0/plugins/xfyun-recog/: Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/plugins/xfyun-recog/.libs/: xfyunrecog.lai
unimrcp-1.5.0/plugins/xfyun-recog/src/: xfyun_recog_engine.c
unimrcp-1.5.0/plugins/xfyun-recog/src/.deps/: xfyun_recog_engine.Plo
unimrcp-1.5.0/plugins/xfyun-synth/: Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/plugins/xfyun-synth/.libs/: xfyunsynth.lai
unimrcp-1.5.0/plugins/xfyun-synth/src/: xfyun_synth_engine.c
unimrcp-1.5.0/plugins/xfyun-synth/src/.deps/: xfyun_synth_engine.Plo
unimrcp-1.5.0/tests/: Makefile  Makefile.in
unimrcp-1.5.0/tests/apttest/: Makefile  Makefile.in
unimrcp-1.5.0/tests/mpftest/: Makefile  Makefile.in
unimrcp-1.5.0/tests/mrcptest/: Makefile  Makefile.in
unimrcp-1.5.0/tests/rtsptest/: Makefile  Makefile.in
unimrcp-1.5.0/tests/strtablegen/: Makefile  Makefile.in
unimrcp-conf/: unimrcpclient.xml  unimrcpserver.xml
unimrcp-conf/umc-scenarios/: README  aneexrecognizer.xml
unimrcp-deps-1.5.0/: CHANGES-deps  README-deps  build-dep-libs.sh
unimrcp-deps-1.5.0/libs/apr/: Makefile  Makefile.in  apr-1-config  apr-config.out  apr.exp  apr.pc  apr.vcproj  apr.vcxproj  apr.vcxproj.filters  config.nice  config.status  configure  exports.c  libapr.rc  libapr.vcproj  libapr.vcxproj  libapr.vcxproj.filters  libtool
unimrcp-deps-1.5.0/libs/apr-util/: Makefile  apr-util.pc  aprutil.exp  aprutil.vcproj  aprutil.vcxproj  aprutil.vcxproj.filters  apu-1-config  apu-config.out  config.nice  config.status  configure  export_vars.sh  exports.c  libaprutil.rc  libaprutil.vcproj  libaprutil.vcxproj  libaprutil.vcxproj.filters
unimrcp-deps-1.5.0/libs/sofia-sip/: Makefile  (+10 more)
(+1814 files in other folders)
