noinst_PROGRAMS = test fftw3 test2d test3d

test_SOURCES = test.c ../include/fftss.h 
test_LDADD = ../libfftss/libfftss.la

fftw3_SOURCES = fftw3.c ../include/fftw3compat.h
fftw3_LDADD = ../libfftss/libfftss.la

test2d_SOURCES = test2d.c ../include/fftss.h
test2d_LDADD = ../libfftss/libfftss.la

test3d_SOURCES = test3d.c ../include/fftss.h
test3d_LDADD = ../libfftss/libfftss.la



