MAINTAINERCLEANFILES   = Makefile.in

SUBDIRS                =

if DEMOSYNTH_PLUGIN
SUBDIRS               += demo-synth
endif

if aneexSYNTH_PLUGIN
SUBDIRS               += aneex-synth
endif

if DEMORECOG_PLUGIN
SUBDIRS               += demo-recog
endif

if aneexRECOG_PLUGIN
SUBDIRS               += aneex-recog
endif

if DEMOVERIFIER_PLUGIN
SUBDIRS               += demo-verifier
endif

if RECORDER_PLUGIN
SUBDIRS               += mrcp-recorder
endif
