AM_CPPFLAGS                = $(UNIMRCP_PLUGIN_INCLUDES)

plugin_LTLIBRARIES         = aneexsynth.la

aneexsynth_la_SOURCES       = src/aneex_synth_engine.c

aneexsynth_la_LDFLAGS       = 
aneexsynth_ladir            = $(libdir)

include $(top_srcdir)/build/rules/uniplugin.am

UNIMRCP_PLUGIN_INCLUDES     += 